tests/lean/structure_elab_segfault.lean.expected.out
structure_elab_segfault.lean:1:0: error: infer type failed, sort expected
  ?m_1[A]
structure_elab_segfault.lean:2:0: error: infer type failed, sort expected
  ?m_1[x]
