tests/lean/structure_elab_segfault.lean
structure foo {A} (R) (x : list A) : Prop := (bar : R x)
structure test : Type := (f : ∀ x y, true)
